GNOME Bugzilla – Bug 724660
Warnings on exit
Last modified: 2014-03-02 21:45:05 UTC
When calling grl_deinit(), it seems that there's an ordering problem in how we free everything. I get two warnings like: (lt-grilo-test-ui-0.2:4128): Grilo-WARNING **: [data] data/grl-data.c:118: Related keys not found for key "(null)" Both of which come from GrlPls based sources:
+ Trace 233189
Key 28 is: GRL_METADATA_KEY_TITLE
Created attachment 270663 [details] [review] core: Free registry resources before unreffing it We can't unref the registry to finalize all the sources and plugins, because they can try to access the registry again in their finalize method. This commit first finalizes the sources, plugins, and other resources, and at the end it unrefs the registry.
Attachment 270663 [details] pushed as 5520b4e - core: Free registry resources before unreffing it